--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,11 +12,12 @@ confinement: classic
 apps:
   # Using the name of the snap as the key name allows the program to be invoked by its name.
   autotools-classic-example:
-    command: usr/bin/hello
+    command: usr/bin/autotools-classic-example
 
 parts:
   hello:
     plugin: autotools
     source: .
     autotools-configure-parameters:
+      - LDFLAGS="-Wl,-dynamic-linker=/snap/core22/current/lib64/ld-linux-x86-64.so.2 -Wl,-rpath=/snap/core22/current/lib/x86_64-linux-gnu"
       - --prefix=/usr
